Fixed js not working on Firefox + some misc fixes

--- a/_sass/pages/_installation.scss
+++ b/_sass/pages/_installation.scss
@@ -35,6 +35,7 @@
 	&:hover {
 		transition: 0.5s;
 		background: $download-alt;
+		cursor: pointer;
 
 		
 	}
